New mail notification does not open email on click
Categories
(Thunderbird :: Message Reader UI, defect)
Tracking
(thunderbird_esr78 unaffected, thunderbird88 fixed)
| Tracking | Status | |
|---|---|---|
| thunderbird_esr78 | --- | unaffected |
| thunderbird88 | --- | fixed |
People
(Reporter: msajner, Assigned: rnons)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:87.0) Gecko/20100101 Firefox/87.0
Steps to reproduce:
New email arrives
A notification window is poped up in notification area
Subject of the incoming message is shown and is clickable
Click the link of the subject
Actual results:
No action. The main TB window is not brought in front and the respective message is not selected.
Expected results:
When clicking the subject of the new message in notification popup window should bring the main TB screen to foreground (if not visible/minimized or in background) and possibly the respective message should be highlighted (or open in read window).
This used to work in older versions.
Comment 1•4 years ago
|
||
Looks like some fallout from recent notification changes.
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
| Assignee | ||
Updated•4 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/e73c8437e0ec
Click a notification should open msg window even minimized to tray. r=mkmelin
Comment 4•4 years ago
|
||
This is causing failures on OSX:
TEST-UNEXPECTED-FAIL | comm/mail/test/browser/folder-pane/browser_displayMessageWithFolderModes.js | Uncaught exception - [Exception... "Could not convert JavaScript argument" nsresult: "0x80570009 (NS_ERROR_XPC_BAD_CONVERT_JS)" location: "JS frame :: resource:///modules/MailUtils.jsm :: displayMessageInFolderTab :: line 324" data: no]
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/ed71bac77ad8
Backed out changeset e73c8437e0ec for test failures. rs=backout DONTBUILD
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/0bc379dfb518
Click a notification should open msg window even minimized to tray. r=mkmelin
| Assignee | ||
Comment 8•4 years ago
|
||
Comment on attachment 9213748 [details]
Bug 1702741 - Click a notification should open msg window even minimized to tray. r=mkmelin
[Approval Request Comment]
Regression caused by (bug #): bug 715799
User impact if declined: Click on a notification doesn't bring (minimized) TB window up
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): low
Comment 9•4 years ago
|
||
Comment on attachment 9213748 [details]
Bug 1702741 - Click a notification should open msg window even minimized to tray. r=mkmelin
[Triage Comment]
Approved for beta
Comment 11•4 years ago
|
||
| bugherder uplift | ||
Thunderbird 88.0b3:
https://hg.mozilla.org/releases/comm-beta/rev/d96b16c8f787
Description
•