Bug 1702741 - Click a notification should open msg window even minimized to tray. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D110910

--HG--
extra : amend_source : 5e548a97975936163888b681a418f8240cc615cf